Dependency management and testing